# faxarray

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: ISSUE_MEMORY.md  MEMORY_USAGE.md  exploring_tar_data.md
faxarray/: __init__.py  cli.py  core.py  fa_metadata.py  plotting.py  reader.py  xarray_accessor.py  xarray_backend.py
faxarray/docs/: metadata-names-list.md
test/: fields_to_compare.txt  validate_output.py
